--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "src/**/*d.ts",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx",
+    "tests/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
