--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "echarts": "^5.3.2",
     "pinia": "^2.0.13",
+    "tailwindcss": "^3.0.24",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
