--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "echarts": "^5.3.2",
     "pinia": "^2.0.13",
-    "tailwindcss": "^3.0.24",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vicons/ionicons5": "^0.12.0",
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "husky": "^8.0.1",
     "naive-ui": "^2.28.2",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
